# knights-tour

projects/hamiltonian/: Cargo.toml
projects/hamiltonian/src/: lib.rs
projects/hamiltonian/src/knights/: mod.rs
projects/knights-tour/: Cargo.toml  readme.md
projects/knights-tour-web/: Cargo.toml  package.json
projects/knights-tour-web/src/: main.rs
projects/knights-tour-web/src/hook/: display.rs  mod.rs
projects/knights-tour-web/src/render/: mod.rs
projects/knights-tour-web/tests/: main.rs
projects/knights-tour/src/: lib.rs
projects/knights-tour/src/knights/: mod.rs  solve.rs  states.rs
projects/knights-tour/src/render/: mod.rs
projects/knights-tour/src/roles/: mod.rs
projects/knights-tour/src/states/: display.rs  mod.rs  solve_tour.rs  solve_walk.rs  states.rs
projects/knights-tour/src/states/kings/: mod.rs
projects/knights-tour/src/states/knights/: mod.rs
projects/knights-tour/src/utils/: mod.rs
projects/knights-tour/tests/: main.rs
