[package]
name = "knights-tour-web"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/knights-tour"
documentation = "https://docs.rs/knights-tour"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.1"

[dependencies.knights-tour]
path = "../knights-tour"

[dev-dependencies]

[features]
default = []
