[package]
name = "knights-tour"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Heuristic search on knight's tour"
repository = "https://github.com/oovm/knights-tour"
documentation = "https://docs.rs/knights-tour"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
svg = "0.13.0"
itertools = "0.10.5"
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]

[features]
default = []
